--- a/war/index.html
+++ b/war/index.html
@@ -54,7 +54,7 @@
       </nav>
     </div>
   </div>
-  <!-- END row --> 
+  <!-- END row --> <!-- Is goed -->
 </header>
 
 <div class="carousel fade-carousel slide" data-ride="carousel" data-interval="2000" id="bs-carousel">
