--- a/war/index.html
+++ b/war/index.html
@@ -113,7 +113,7 @@
                       heb ik niet echt een voorkeur wat betreft leerwijze en/of werkzaamheden.
                       Dus als u een stage plek voor mij heeft of een leerbedrijf dat een stagiair zoekt, neem dan 
                       gerust contact met mij op.
-                      </strong>
+                      </strong> //ewaaa
                       </p>
         </div>
       </div>
